--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <body>
 <script> src="script.js"</script>
 <h1>resolução de equação de segundo grau</h1>
+<h2>equação na forma ax² + bx + c = 0</h2>
+<input type="text" placeholder="a">
+<p>x² +</p>
+<input type="text" placeholder="b">
+<p>x +</p>
+<input type="text" placeholder="c">
+<p>= 0</p>
+<button>resolver</button>
+<span>resultado</span>
     
 </body>
 </html>
